added footer component

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -32,3 +32,5 @@ html(lang="en")
           h2.card-title Explore Sicily
           p.card-text Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
           button.card-button Discover
+
+    include components/footer.pug
