mobile hamburger menu and carosuel navigation fixes

--- a/src/views/components/carousel.pug
+++ b/src/views/components/carousel.pug
@@ -17,8 +17,13 @@ section.carousel
         button.carousel-button Enquire Now
 
     .carousel-item
-      img(src="assets/images/image1.jpg" alt="Luxury Living")
+      img(src="assets/images/image3.jpg" alt="Luxury Living")
       .carousel-text
         h3 Luxury Living
         p Experience unparalleled comfort and sophistication with our bespoke luxury residences tailored to your lifestyle.
         button.carousel-button Enquire Now
+
+  // Navigation Arrows (Moved to Middle)
+  .carousel-nav
+    button.carousel-prev &larr;
+    button.carousel-next &rarr;
